# ProjectSourceDoc

./: .gitignore  AI-Bash.md  AI-CPP.md  CMakeLists.txt  FIXME.md  Plan.txt  Project-Source.txt  Project-Tree.txt  README.md  README_zh_CN.md  RELEASE.md  deploy.sh  install.sh  message-queue.txt
bash/: backup.sh  build-appimage.sh  deep-runtime-diagnose.sh  deploy-original.sh  git.sh  io.github.am-tower.ProjectSourceDoc.metainfo.xml  library.sh  source_files.sh
cmake/: PackSource.cmake  macos_notarize_dmg.cmake
i18n/: ProjectSourceDoc_zh_CN.ts
resources/: ProjectSourceDoc.qrc
src/: AboutDialog.cpp  AboutDialog.h  AppLogUtils.cpp  AppLogUtils.h  CMakeSourceParser.cpp  CMakeSourceParser.h  EmbeddedDocs.cpp  EmbeddedDocs.h  GitIgnoreMatcher.cpp  GitIgnoreMatcher.h  LineNumberPlainTextEdit.cpp  LineNumberPlainTextEdit.h  MainWindow.cpp  MainWindow.h  MainWindowTheme.cpp  ProjectNode.h  ProjectPaths.cpp  ProjectPaths.h  ProjectSourceDoc.cpp  ProjectSourceDoc.h  ProjectSourceExporter.cpp  ProjectSourceExporter.h  ProjectSourceGenerator.cpp  ProjectSourceGenerator.h  ProjectTreeBuilder.cpp  ProjectTreeBuilder.h  StatusBarQueue.cpp  StatusBarQueue.h  main.cpp
tests/: ProjectSourceDocTests.cpp
